<resources>
    <string name="app_name">Product list</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Logowanie</string>
    <string name="action_register">Rejestracja</string>
    <string name="action_sign_in_short">Logowanie</string>
    <string name="welcome">"Witaj !"</string>
    <string name="invalid_username">Nieprawidłowa nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi mieć więcej niż 5 znaków</string>
    <string name="login_failed">"Logowanie nie powiodło się"</string>
    <string name="hello">Lista zakupów dla Ciebie!</string>
    <string name="register_hello">Zarejestruj konto</string>
</resources>