<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.RegisterActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="serif"
            android:text="@string/register_hello"
            android:textColor="#292727"
            android:textSize="36sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/prompt_name"
            android:selectAllOnFocus="true"
            android:textColor="#4C4949"
            android:textColorHint="#4C4949" />

        <TextView
            android:id="@+id/name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:textColor="#F44336" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#4C4949"
            android:textColorHint="#4C4949" />

        <TextView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:textColor="#F44336" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="#4C4949"
            android:textColorHint="#4C4949" />

        <TextView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:textColor="#F44336" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginTop="25dp"
            android:background="#8BC34A"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/action_register"
            android:textColor="#393939" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>